name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Qwertee/eulerHS#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          github.com/Qwertee
copyright:           2017 Qwertee
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler
  build-depends:       base >= 4.7 && < 5, primes
  default-language:    Haskell2010

executable euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Qwertee/eulerHS
